--- a/style.css
+++ b/style.css
@@ -284,10 +284,17 @@ fieldset legend {
     }
 }
 
-@media(max-width: 500px){
+@media(max-width: 320px){
+
+    .instagram-logo{
+        height: 3rem;
+        opacity: 85%;
+    }
+
     .instag-division{
         width: 100%;
         height: 100vh;
     }
+
 }
 
