--- a/style.css
+++ b/style.css
@@ -265,8 +265,10 @@ fieldset legend {
         height: 75%;
         margin-right:100px; 
     }  
+    /* novo atuali */
     .conteiner-login{
         width: 40%;
+        
     }
 }
 
