--- a/style.css
+++ b/style.css
@@ -6,8 +6,13 @@
     box-sizing: border-box;   
 }
 
+root{
+    --white: #fafafa;
+    --lightgray:lightgray;
+}
+
 body{
-    background-color: #fafafa;
+    background-color:var(--white);
     display: flex;
     justify-content: center;
     text-decoration: none;
@@ -72,7 +77,7 @@ body{
     margin: 3px;
     border: none;
     outline: 0;
-    border: 1px solid lightgray;
+    border: 1px solid var(--lightgray);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS';
 }
 
@@ -81,7 +86,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: var(--white);
     border: 1px solid rgb(228, 220, 220);
     width: 93%;
     padding: 1rem 0;
@@ -133,7 +138,7 @@ body{
     width: 70%;
   }
 fieldset {
-      border-top: 1px solid lightgray;
+      border-top: 1px solid var(--lightgray);
        border-bottom: none;
        border-left: none;
        border-right: none;
@@ -204,7 +209,7 @@ fieldset legend {
 }
 
 .app-download:nth-child(1){
-    background-image: url('assets/botão_GooglePlay.png');
+    background-image: url('assets/btns/botão_GooglePlay.png');
     background-size: contain;
     background-repeat: no-repeat;
     height: 40px;
@@ -214,7 +219,7 @@ fieldset legend {
 }
 
 .app-download:nth-child(2){
-    background-image: url('assets/botão_Microsorft.png');
+    background-image: url('assets/btns/botão_Microsorft.png');
     background-size: contain;
     background-repeat: no-repeat;
     height: 40px;
@@ -250,7 +255,7 @@ fieldset legend {
         margin: 3px;
         border: none;
         outline: 0;
-        border: 1px solid lightgray;
+        border: 1px solid var(--lightgray);
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS';
     }
    
